<resources>
    <string name="app_name">HiNoFi</string>
    <!-- Strings related to Text Entries -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_recipient">Recipient</string>
    <string name="prompt_bodyMessage">Message</string>
    <string name="prompt_subject">Subject</string>

    <string name="action_myFeed">My Feed</string>
    <string name="action_myAccount"> My Account</string>
    <string name="action_help">Help</string>
    <string name="action_signIn">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sendHelp">Send Help Request</string>
    <string name="action_search">Search Artists</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_Title">HiNoFi</string>
    <string name="text_Subtitle">Bring Music Together</string>
    <string name="Action_Login">Login</string>
    <string name="button_help">Help</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_Username">Username</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="error_message_username">Enter A valid username</string>
    <string name="error_message_email">Enter A valid email</string>
    <string name="error_message_password">Enter A valid Password</string>
    <string name="TxtViewSignUp">Sign Up</string>
    <string name="TxtViewLogin">Login</string>
    <string name="TxtViewHelp">Help</string>
    <string name="TxtViewWelcome">Welcome!!!</string>
    <string name="TxtViewMyAccount">My Account</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="error_password_match">Passwords don\'t match</string>
    <string name="message_success">User Registered Successfully</string>
    <string name="error_user_exists">User already exists</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_MyAccounts">My Accounts</string>
    <string name="text_allAccounts">All Accounts</string>
    <string name="btnSend">Send</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="title_activity_home_test">HomeTestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_search">Search</string>
    <string name="tab_myFeed">My Feed</string>
    <string name="tab_myAccount">My Account</string>
    <string name="hint_dob">Date Of Birth</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
