<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/bottom_nav_myFeed"
        android:enabled="true"
        android:icon="@drawable/ic_action_my_feed"
        android:title="@string/action_myFeed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_search"
        android:enabled="true"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_myAccount"
        android:enabled="true"
        android:icon="@drawable/ic_action_my_account"
        android:title="@string/action_myAccount"
        app:showAsAction="ifRoom" />
</menu>