<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".activities.LoginActivity"
        android:background="@color/BackgroundColour"
        >



        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/text_Title"
            android:textColor="@color/Title"
            android:textSize="36sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/txtSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/text_Subtitle"
            android:textColor="@color/Subtitle"
            android:textSize="16sp"
            android:textStyle="bold"
            />


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/Box">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="83dp"
                    android:layout_gravity="center"
                    android:text="@string/TextViewSignUp"
                    android:textColor="@android:color/black"
                    android:textSize="45sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInputEditUsername"
                        android:layout_width="250sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="15sp"
                        android:background="@android:color/white"
                        android:hint="@string/prompt_username"
                        android:inputType=""
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInputEditEmail"
                        android:layout_width="250sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="15sp"
                        android:background="@android:color/white"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInputEditPassword"
                        android:layout_width="250sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/white"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInputEditConfirmPassword"
                        android:layout_width="250sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/white"
                        android:hint="@string/prompt_confirm_password"
                        android:imeActionId="6"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    style="?android:textAppearanceSmall"
                    android:layout_width="248dp"
                    android:layout_height="43dp"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_buttons"
                    android:gravity="center"
                    android:text="@string/btnRegister"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/lnkLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="Already a member? Login"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


    </LinearLayout>