<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity"
    android:background="@color/BackgroundColour"
    >


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/text_Title"
        android:textColor="@color/Title"
        android:textSize="50sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/text_Subtitle"
        android:textColor="@color/Subtitle"
        android:textSize="16sp"
        android:textStyle="bold"
        />


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="500sp"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:background="@color/Box">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="50sp"
                android:text="@string/TxtViewMyAccount"
                android:textColor="@android:color/black"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewUsername"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Username"
                android:textSize="25dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/black"
                android:background="@android:color/white"/>
            <TextView
                android:id="@+id/txtViewDOB"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:text="DateOfBirth"
                android:textSize="25dp"
                android:textColor="@android:color/black"
                android:background="@android:color/white"/>
            <TextView
                android:id="@+id/txtViewEmailAddress"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:text="EmailAddress"
                android:textSize="25dp"
                android:textColor="@android:color/black"
                android:background="@android:color/white"/>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>